@@ -1,3 +1,6 @@
+2011-10-06
+ * telescope model parameters visible in telescope device
+
 2011-10-03
  * elementPosition and supporting operations
 
